# VercelForAgents

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  eval-gate.yml
agentctl/: cli.py  config.py
agentctl/agents/: echo_agent.py  support_agent.py  vision_sink.py
agentctl/auth/: __init__.py  cli.py  fastapi_dep.py  grpc_interceptor.py  keys.py  principal.py  users.py
agentctl/cli/: __init__.py  __main__.py  main.py  status.py
agentctl/common/: db.py
agentctl/control/: __init__.py  cli.py  webhook.py
agentctl/dashboard/: __init__.py  app.py  queries.py  render.py
agentctl/edge/: ws_bridge.py
agentctl/eval/: api.py  engine.py  gate.py  ingest.py  judge.py  runner.py  synthetic_judge.py
agentctl/gateway/: cli.py  frames.py  go_launcher.py  pg_route_cache.py  proxy.py  route_cache.py  router.py  shadow.py  tuning.py  wire.py
agentctl/gateway_core/: .gitignore  Makefile  README.md  go.mod  go.sum
agentctl/gitops/: __init__.py  github_gate.py  webhook_app.py
agentctl/mocking/: cassette.py  registry.py
agentctl/operator/: __init__.py  controller.py  reconcile.py
agentctl/rollback/: audit.py  cli.py  manifest.py  models.py  rollback.py  rollout.py  routing.py  schema_postgres.sql  seed.py
agentctl/runtime/: __init__.py  isolated.py  sandbox_interceptor.py
agentctl/storage/: duckdb_store.py  schema_clickhouse.sql  schema_duckdb.sql
agentctl/telemetry/: __init__.py  clickhouse_exporter.py  exporter.py  otlp_exporter.py
assets/: make_diagrams.py
demo/: complete_pipeline.py  gateway_demo.py  go_cutover_demo.py  make_fixtures.py  route_watch_demo.py  run_all.sh  run_complete_pipeline.sh  run_eval_gate.sh  telemetry_demo.py  ws_demo.py  yolo_stress_client.py
demo/fixtures/: candidate.jsonl  candidate_borderline.jsonl  candidate_regression.jsonl  candidate_small.jsonl  main.jsonl  main_borderline.jsonl  (+1 more)
deploy/: Dockerfile.controlplane  Dockerfile.gateway  docker-compose.yml
docs/: ARCHITECTURE_PRD.md  LOCAL_SETUP.md  ROADMAP_1_0.md
proto/: controlplane.proto  dataplane.proto  envelope.proto
tests/: conformance_control.py  conformance_frames.py  test_auth.py  test_cli_status.py  test_clickhouse_exporter.py  test_conformance.py  test_dashboard.py  test_gate.py  test_github_app.py  test_github_gate.py  test_go_gateway_auth.py  test_llm_judge.py  test_operator.py  test_otlp_exporter.py  test_pgvector.py  test_pinecone.py  test_proxy_zerocopy.py  test_qdrant.py  test_rollback.py  test_rollout.py  test_rollout_split.py  test_router.py  test_runtime.py  test_sandbox.py  test_shadow.py  test_telemetry_batch.py  test_tenancy_fk.py  test_webhook.py  test_wire_py.py
(+69 files in other folders)
