[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentctl"
version = "1.0.0"
description = "A unified GitOps control plane for AI agents: statistical eval-gating, a streaming gRPC gateway, stateful rollback, multi-tenant RBAC, and ClickHouse telemetry."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "grpcio>=1.60",
  "grpcio-tools>=1.60",
  "duckdb>=0.10",
  "psycopg[binary]>=3.1",
  "websockets>=12.0",
  "uvicorn>=0.27",
  "opentelemetry-sdk>=1.24",
  "scipy>=1.11",
  "numpy>=1.26",
  "fastapi>=0.110",
  "typer>=0.12",
  "rich>=13.0",
]

[project.scripts]
agentctl = "agentctl.cli:main"

[tool.setuptools.packages.find]
include = ["agentctl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
