[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentctl"
version = "1.0.0"
description = "A unified GitOps control plane for AI agents: statistical eval-gating, a streaming gRPC gateway, stateful rollback, multi-tenant RBAC, and ClickHouse telemetry."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["ai-agents", "llm", "gitops", "eval", "grpc", "rollback", "control-plane", "mlops"]
authors = [{ name = "agentctl authors" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "grpcio>=1.60",
  "grpcio-tools>=1.60",
  "duckdb>=0.10",
  "psycopg[binary]>=3.1",
  "websockets>=12.0",
  "uvicorn>=0.27",
  "opentelemetry-sdk>=1.24",
  "scipy>=1.11",
  "numpy>=1.26",
  "fastapi>=0.110",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
# managed vector backend (AGENTCTL_STATE_BACKEND=qdrant); core install stays slim.
qdrant = ["qdrant-client>=1.7"]

[project.urls]
Homepage = "https://github.com/Swa-s-tik/VercelForAgents"
Repository = "https://github.com/Swa-s-tik/VercelForAgents"
Changelog = "https://github.com/Swa-s-tik/VercelForAgents/blob/main/CHANGELOG.md"
Issues = "https://github.com/Swa-s-tik/VercelForAgents/issues"

[project.scripts]
agentctl = "agentctl.cli:main"

[tool.setuptools.packages.find]
include = ["agentctl*"]

[tool.setuptools.package-data]
# runtime data files (schema DDL read by apply_schema / the CLI) must ship in the wheel.
"*" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
